# hvac-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PRD.docx  README.md  fly.toml  pyproject.toml  railway.toml
.claude/: settings.json
.claude/agents/: customer-support-responder.md  hvac-data-verifier.md
.claude/hooks/: auto_ruff.sh  guard_data.sh  guard_storage.sh
.claude/skills/add-tool/: SKILL.md
.claude/skills/inspect/: SKILL.md
.claude/skills/prelaunch-check/: SKILL.md
.claude/skills/support-lookup/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  pages.yml  release.yml
.remember/: core-memories.md
docs/: CONNECTING.md  DEPLOY_RUNBOOK.md  LAUNCH_CHECKLIST.md  MARKETING_POSTS.md  MCP_SERVERS.md  STRIPE_LINKS.md  TOOL_CATALOG.md  stripe-links.live.json  stripe-links.test.json
landing/: README.md  index.html  success.html
scripts/: create_stripe_products.sh
src/hvac_mcp/: __init__.py  licensing.py  server.py  storage.py  webhook.py
src/hvac_mcp/data/: capacitors.json  code_snippets.json  fault_codes.json  pipe_sizing.json  pt_tables.json  symptoms.yaml
src/hvac_mcp/tools/: __init__.py  code_lookup.py  diagnostics.py  invoice.py  parts.py  refrigerant.py  sizing.py
src/hvac_mcp/utils/: __init__.py  api.py  formatting.py
tasks/: lessons.md  todo.md
tests/: test_code_lookup.py  test_diagnostics.py  test_invoice.py  test_parts.py  test_refrigerant.py  test_server_boots.py  test_sizing.py  test_storage_and_webhook.py
